Mon Feb 19 09:48:02 GMT 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am,docs/XapianAdminNotes.txt,docs/admin_notes.rst:
	  Generated file "XapianAdminNotes.html" doesn't fit the naming
	  conventions of other files at all, so renamed to "admin_notes.html".
	  Rename the source to ".rst" so we can use an implicit rule for
	  the conversion, in anticipation of other documentation in ReST
	  format.

Mon Feb 19 09:10:48 GMT 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Fix typos which stopped parallel make from working
	  correctly in "docs" subdirectory.

Sun Feb 18 22:36:46 GMT 2007  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/omstringstream.h,common/output.h,
	  include/Makefile.mk,include/xapian/output.h: Move
	  "<xapian/output.h>" to being an internal header in "common/" since
	  it hasn't been included by "<xapian.h>" since 0.7.0.

Sun Feb 18 22:18:33 GMT 2007  Olly Betts <olly@survex.com>

	* include/xapian/dbfactory.h: Add documentation comment for the "prog"
	  form of Remote::open_writable().

Sun Feb 18 19:31:20 GMT 2007  Olly Betts <olly@survex.com>

	* tests/queryparsertest.cc: Add test for "associative NEAR".

Sun Feb 18 18:27:40 GMT 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc,tests/harness/backendmanager.h:
	  Merge BackendManager::change_names_to_paths() into
	  index_files_to_database() and make the latter a method of
	  class BackendManager.
	* tests/harness/backendmanager.cc: Remove mention of muscat36 backends
	  from error message listing valid backends.
	* tests/harness/backendmanager.h: Comment out prototypes for currently
	  disabled methods getdb_inmemoryerr, getwritedb_inmemory, etc.

Sat Feb 17 15:38:05 GMT 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc: new throws if allocation fails
	  so we don't need to check the return value.

Sat Feb 17 02:08:22 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
